Re-implementation of the non breaking / no wrap white space on the left side menu.  This fix seems to disappear periodically.

--- a/templates/default/style/stylesheet.css
+++ b/templates/default/style/stylesheet.css
@@ -263,6 +263,7 @@ input.liteoption {
 
 #leftMenuBackground {
 	background-image:url('../images/leftMenu_bg.gif');
+	white-space: nowrap;
 }
 
 #leftMenuBorder {
